--- a/hw1-vue-tab/public/stylesheets/main.css
+++ b/hw1-vue-tab/public/stylesheets/main.css
@@ -9,7 +9,13 @@
   display: block;
   clear: both;
 }
+p {
+  margin: 0;
+  padding: 0;
+}
 .mod-tab {
+  width: 815px;
+  margin: 30px auto 0;
   padding: 20px;
   border: 10px solid skyblue;
 }
@@ -33,10 +39,17 @@
 .mod-tab .mod-tab-hd .tab-item:nth-of-type(2) {
   border-right: 1px solid #fff;
 }
+.mod-tab .mod-tips {
+  margin-top: 20px;
+  font-size: 14px;
+  color: red;
+}
 .mod-tab .content .tab-table {
+  float: left;
+  width: 400px;
   border: 2px solid pink;
   margin-top: 20px;
-  padding: 10px 5px;
+  padding: 10px 15px;
   text-align: center;
 }
 .mod-tab .content .tab-table .tdStyle {
@@ -44,13 +57,61 @@
   width: 100px;
   line-height: 30px;
 }
+.mod-tab .content .tab-table .thead {
+  background: pink;
+  color: #fff;
+}
 .mod-tab .content .tab-table .thead > .th {
   float: left;
   width: 100px;
   line-height: 30px;
 }
+.mod-tab .content .tab-table .tbody .tr:nth-of-type(2n) {
+  background: #eee;
+}
 .mod-tab .content .tab-table .tbody .td {
   float: left;
   width: 100px;
   line-height: 30px;
+}
+.mod-tab .content .mod-add {
+  float: right;
+  margin-top: 20px;
+  padding: 20px;
+  border: 1px solid pink;
+}
+.mod-tab .content .mod-add .form-tofill .form-item {
+  margin: 5px 0;
+}
+.mod-tab .content .mod-add .form-tofill .form-item .item-name {
+  float: left;
+  width: 50px;
+  line-height: 30px;
+  text-align: right;
+  margin-right: 20px;
+}
+.mod-tab .content .mod-add .form-tofill .form-item .item-toinput {
+  float: left;
+}
+.mod-tab .content .mod-add .form-tofill .form-item .item-toinput .inp {
+  width: 250px;
+  height: 30px;
+  box-sizing: border-box;
+}
+.mod-tab .content .mod-add .form-tofill .form-item .item-toinput > label {
+  line-height: 30px;
+}
+.mod-tab .content .mod-add .operating-btns {
+  width: 110px;
+  margin: 0 auto;
+}
+.mod-tab .content .mod-add .operating-btns button {
+  width: 50px;
+  height: 30px;
+  background: pink;
+  color: #fff;
+  float: left;
+}
+.mod-tab .content .mod-add .operating-btns button:first-of-type {
+  margin-right: 10px;
 }
